--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "ejs": "^2.6.1",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-loader": "2.1.1",
@@ -67,7 +68,7 @@
     "start-client": "node client/scripts/start.js",
     "build-client": "node client/scripts/build.js",
     "test-client": "node client/scripts/test.js",
-    "start-server": "echo '>>> need server start script'",
+    "start-server": "node server/src/app.js",
     "start": "concurrently \"npm:start-*\""
   },
   "eslintConfig": {
