--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     image: mysql:5.7.21
     restart: always
     volumes:
-      - 'data/mysql:/var/lib/mysql'
+      - './data/mysql/db:/var/lib/mysql'
+      - './data/database_schema.sql/docker-entrypoint-initdb.d/database_schema.sql'
     ports:
       - '3366:3306'
     environment:
