--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react": "^16.7.0",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
+    "react-dnd": "^7.0.2",
+    "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.7.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
@@ -69,7 +71,7 @@
     "start-client": "node client/scripts/start.js",
     "build-client": "node client/scripts/build.js",
     "test-client": "node client/scripts/test.js",
-    "start-server": "node server/src/app.js",
+    "start-server": "nodemon server/src/app.js",
     "start": "concurrently \"npm:start-*\""
   },
   "eslintConfig": {
@@ -140,6 +142,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "nodemon": "^1.18.9",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.7.0"
   }
