--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "enzyme-to-json": "^3.3.5",
     "nodemon": "^1.18.9",
     "react-scripts": "^2.1.3",
-    "react-test-renderer": "^16.7.0"
+    "react-test-renderer": "^16.7.0",
+    "newman": "^4.3.1"
   }
 }
