Added transporter classes for data connection to mySQL database. Remove Model classes.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -59,6 +60,7 @@
     "react-dom": "^16.7.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "sequelize": "^4.42.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
