--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "http-proxy-middleware": "^0.19.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
@@ -43,6 +44,7 @@
     "mini-css-extract-plugin": "0.4.3",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "mustache": "^3.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -66,13 +68,6 @@
     "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
-  },
-  "scripts": {
-    "start-client": "node client/scripts/start.js",
-    "build-client": "node client/scripts/build.js",
-    "test-client": "node client/scripts/test.js",
-    "start-server": "nodemon server/src/app.js",
-    "start": "concurrently \"npm:start-*\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -145,5 +140,12 @@
     "nodemon": "^1.18.9",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.7.0"
+  },
+  "scripts": {
+    "start-client": "node client/scripts/start.js",
+    "build-client": "node client/scripts/build.js",
+    "test-client": "node client/scripts/test.js",
+    "start-server": "nodemon server/src/app.js",
+    "start": "concurrently \"npm:start-*\""
   }
 }
