--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
@@ -69,7 +68,8 @@
     "build-client": "node client/scripts/build.js",
     "test-client": "node client/scripts/test.js",
     "start-server": "node server/src/app.js",
-    "start": "concurrently \"npm:start-*\""
+    "start": "concurrently \"npm:start-*\"",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -81,6 +81,7 @@
     "not op_mini all"
   ],
   "jest": {
+    "verbose": true,
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
       "!src/**/*.d.ts"
@@ -139,6 +140,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "jest": "^23.6.0",
     "react-scripts": "^2.1.3",
     "react-test-renderer": "^16.7.0"
   }
