--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.28",
     "@svgr/webpack": "2.4.1",
+    "@types/node": "^10.12.24",
     "@types/react": "^16.7.18",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
@@ -22,6 +23,7 @@
     "chalk": "2.4.1",
     "concurrently": "^4.1.0",
     "css-loader": "1.0.0",
+    "dagre": "^0.8.4",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "ejs": "^2.6.1",
@@ -41,11 +43,12 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
-    "mysql2": "^1.6.4",
     "mustache": "^3.0.1",
+    "mysql2": "^1.6.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -62,6 +65,7 @@
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "sequelize": "^4.42.0",
+    "storm-react-diagrams": "^5.2.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
@@ -139,10 +143,10 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "newman": "^4.3.1",
     "nodemon": "^1.18.9",
     "react-scripts": "^2.1.3",
-    "react-test-renderer": "^16.7.0",
-    "newman": "^4.3.1"
+    "react-test-renderer": "^16.7.0"
   },
   "scripts": {
     "start-client": "node client/scripts/start.js",
