--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mobx-react": "^5.4.3",
     "mustache": "^3.0.1",
     "mysql2": "^1.6.4",
+    "mysqldump": "^2.2.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
