--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 NODE_PATH=./src
 REACT_APP_API=http://localhost:3001
+BUILD_DIR=/client/build
+DATABASE_HOST=localhost
+DATABASE_PORT=3366
+DATABASE_USERNAME=user
+DATABASE_PASSWORD=password
