--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -14,9 +14,9 @@
   "dev": {
   },
   "prod": {
-    "REACT_APP_API": "http://localhost:3001",
-    "DATABASE_HOST": "localhost",
-    "DATABASE_PORT": 3366,
+    "REACT_APP_API": "http://localhost:8081",
+    "DATABASE_HOST": "blsi-db",
+    "DATABASE_PORT": 3306,
     "DATABASE_USERNAME": "user",
     "DATABASE_PASSWORD": "password",
     "HTTP_PORT": 5000
